--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "vue_crash_todolist",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://surik00.github.io/vue-todo-list",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "gh-pages": "^2.0.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.6.10",
